fix a bug where the background stretch to far, in the side content

--- a/_includes/css/module.css
+++ b/_includes/css/module.css
@@ -92,6 +92,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     max-height: 100vh;
+    overflow: hidden;
 }
 
 .side-content__sidebar {
